# misis2024f-24-01-vlasov-a-a

./: CMakeLists.txt  codeforces.id  complex_new.cpp  status.md
prj.codeforces/: 0004a.cpp  0136a.cpp  0158a.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0339b.cpp  0617a.cpp  0915a.cpp  0935b.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1352a.cpp  1404a.cpp  1462a.cpp  1512b.cpp  1512c.cpp  1519b.cpp  1585a.cpp  1649a.cpp  1670b.cpp  1671a.cpp  1678a.cpp  1680b.cpp  1692c.cpp  1701a.cpp  1717b.cpp  1721b.cpp  1872a.cpp  1873c.cpp  1873d.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt  complex.hpp
prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp  arrayd.hpp
prj.lab/arrayt/: CMakeLists.txt  arrayt.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.lab/queuea/: CMakeLists.txt  queuea.cpp  queuea.hpp
prj.lab/queuel/: CMakeLists.txt  queuel.cpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stackl/: CMakeLists.txt  stackl.cpp  stackl.hpp
prj.test/: CMakeLists.txt  arrayd_doctest.cpp  arrayt_doctest.cpp  arrayt_test.cpp  complex_doctest.cpp  complex_test.cpp  queuea_doctest.cpp  rational_doctest.cpp  rational_test.cpp  stackl_doctest.cpp
